# Jaguar_Linux_package_Manager

./: .gitignore  AUTHORS  Makefile  README.md  TODO  meson.build  meson_options.txt
doc/: Makefile  meson.build  ps4-adbdump.8.scd  ps4-adbgen.8.scd  ps4-adbsign.8.scd  ps4-add.8.scd  ps4-audit.8.scd  ps4-cache.5.scd  ps4-cache.8.scd  ps4-convdb.8.scd  ps4-convndx.8.scd  ps4-del.8.scd  ps4-dot.8.scd  ps4-extract.8.scd  ps4-fetch.8.scd  ps4-fix.8.scd  ps4-index.8.scd  ps4-info.8.scd  ps4-keys.5.scd  ps4-list.8.scd  ps4-manifest.8.scd  ps4-mkndx.8.scd  ps4-mkpkg.8.scd  ps4-package.5.scd  ps4-policy.8.scd  ps4-repositories.5.scd  ps4-search.8.scd  ps4-stats.8.scd  ps4-update.8.scd  ps4-upgrade.8.scd  ps4-v2.5.scd  ps4-v3.5.scd  ps4-verify.8.scd  ps4-version.8.scd  ps4-world.5.scd  ps4.8.scd
libfetch/: meson.build
scripts/: generate-meson-crossfile.sh
src/: Makefile  adb.c  adb.h  adb_comp.c  adb_walk_adb.c  adb_walk_genadb.c  adb_walk_gentext.c  adb_walk_text.c  app_adbdump.c  app_adbsign.c  app_add.c  app_audit.c  app_cache.c  app_convdb.c  app_convndx.c  app_del.c  app_dot.c  app_extract.c  app_fetch.c  app_fix.c  app_index.c  app_info.c  app_list.c  app_manifest.c  app_mkndx.c  app_mkpkg.c  app_policy.c  app_search.c  app_stats.c  app_update.c  app_upgrade.c  app_verify.c  app_version.c  app_vertest.c  applet.c  atom.c  balloc.c  blob.c  commit.c  common.c  (+58 more)
test/: .gitignore  Makefile  command-parsing.sh  selfupgrade.repo  selfupgrade1.installed  selfupgrade1.test  selfupgrade2.installed  selfupgrade2.test  selfupgrade3.installed  selfupgrade3.test  selfupgrade4.test  solver.sh  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  version.data
test/repo1/test-a/: PS4BUILD
test/repo1/test-c/: PS4BUILD
test/repo1/test-d/: PS4BUILD
test/repo2/test-a/: PS4BUILD
test/repo2/test-b/: PS4BUILD
tests/: meson.build  test-basic.sh  test-lib.sh
